Pull request #135: Capture vpn-libs log to bamboo artifact
Merge in ADGUARD-CORE-LIBS/vpn-libs from integration_test_vpn_logs to master

Squashed commit of the following:

commit 3d024193a27d945df8e8cba065384db52ebe154a
Author: Max Grupper <m.grupper@adguard.com>
Date:   Tue Apr 11 17:02:41 2023 +0300

    force gzip

commit 0b52497c8979a79efd6a89ba19aaa3c8cba72689
Author: Max Grupper <m.grupper@adguard.com>
Date:   Tue Apr 11 16:42:53 2023 +0300

    clean logs from docker

commit 901de027b0d728a6b7fe3ddc93898484bd5dc245
Author: Max Grupper <m.grupper@adguard.com>
Date:   Tue Apr 11 16:33:50 2023 +0300

    Update run-integration-test.yaml

commit 51d029f1a51cb7ecc42f04aca7effb8ef6861e3f
Author: Max Grupper <m.grupper@adguard.com>
Date:   Tue Apr 11 15:54:13 2023 +0300

    Update integration_test.sh

commit eedae52b2c23e1acb266a2c71cc4cee80de3887d
Author: Max Grupper <m.grupper@adguard.com>
Date:   Tue Apr 11 15:30:39 2023 +0300

    Update integration_test.sh

commit f2071c0a2758d61a19beaf8b3c66d3021c2cae06
Author: Max Grupper <m.grupper@adguard.com>
Date:   Tue Apr 11 14:33:57 2023 +0300

    Update integration_test.sh

commit 3f9d0e3e3c99d780ebf127fa36f5a5739a0f7f2e
Author: Max Grupper <m.grupper@adguard.com>
Date:   Tue Apr 11 14:26:01 2023 +0300

    chmod in container

commit f677e84bb79e8fd3289a68ffb90641d12e7b84e1
Author: Max Grupper <m.grupper@adguard.com>
Date:   Tue Apr 11 14:06:04 2023 +0300

    Update run-integration-test.yaml

commit ad46991c079145d185a3960c946ce13696cf4ec7
Author: Max Grupper <m.grupper@adguard.com>
Date:   Tue Apr 11 14:02:29 2023 +0300

    unique name for logs

commit 4a7cb96326ac6c9875c2c9d21c9acd94868cea60
Author: Max Grupper <m.grupper@adguard.com>
Date:   Mon Apr 10 12:44:54 2023 +0300

    oops

commit ceaea77e75e9665cbe65eb8d63313e7e5273add3
Author: Max Grupper <m.grupper@adguard.com>
Date:   Mon Apr 10 12:42:29 2023 +0300

    remove blank & compress logs

commit 5e1ee5f477d475175c9f42139f5fabc8d7b64bb6
Author: Max Gruppe

--- a/bamboo-specs/run-integration-test.yaml
+++ b/bamboo-specs/run-integration-test.yaml
@@ -59,11 +59,23 @@ Run integration test:
 
             set -x -e
 
+            pushd logs
+            gzip -f vpn_tun_http2.log
+            gzip -f vpn_tun_http3.log
+            gzip -f vpn_socks_http2.log
+            gzip -f vpn_socks_http3.log
+            popd
+
             ./integration_test.sh clean
         description: Cleanup
         working-dir: test
   requirements:
     - adg-privileged-docker
+  artifacts:
+    - name: Vpn-Libs Log
+      location: test/logs
+      pattern: '*.gz'
+      shared: false
   artifact-subscriptions: [ ]
 Run live test:
   key: JOB2
