--- a/conandata.yml
+++ b/conandata.yml
@@ -306,3 +306,5 @@ commit_hash:
     hash: "7b25d33fa4cafe9e02c7a03c42a9e15e783a016e"
   "0.92.28":
     hash: "a20688e6dec5569af5b0d411205a46847ae9c710"
+  "0.92.29":
+    hash: "1006f4fbf86744587747f7ca49bce488218d7023"
