skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -314,3 +314,5 @@ commit_hash:
     hash: "7da2546544d5fe59ae4a465cdb981bc0272d940b"
   "0.92.32":
     hash: "6a5c761a5269b7480b6af79cb1214df3e3f0dfab"
+  "0.92.33":
+    hash: "8ffdac314809ef24a076329896e1f3861f4dfae4"
