Pull request #151: Allow to specify the endpoint certificate
Merge in ADGUARD-CORE-LIBS/vpn-libs from feature/AG-22589 to master

Squashed commit of the following:

commit cd4261b86e5c12b1d678203e5bc46f0a83db237b
Author: Sergei Gunchenko <s.gunchenko@adguard.com>
Date:   Thu May 25 17:00:56 2023 +0300

    review

commit 2eb232710c934aa0744f2a62c0b990045b2b370f
Author: Sergei Gunchenko <s.gunchenko@adguard.com>
Date:   Thu May 25 16:45:49 2023 +0300

    core: Allow to specify an endpoint certificate

commit 3c699231df33003557b46a41454d731c7867929c
Author: Sergei Gunchenko <s.gunchenko@adguard.com>
Date:   Thu May 25 16:43:16 2023 +0300

    core: minor

--- a/core/test/standalone_client/standalone_client.conf
+++ b/core/test/standalone_client/standalone_client.conf
@@ -5,6 +5,7 @@
         "username": "premium",
         "password": "premium",
         "skip_cert_verify": false,
+        "cert": null,
         "upstream_protocol": "http2",
         "upstream_fallback_protocol": "http2"
     },
