skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -328,3 +328,5 @@ commit_hash:
     hash: "0bc342bdaa097a84d35259ddf05b4260b767e20c"
   "0.92.39":
     hash: "4a5e97ed6e26a157865d3a73656560d04afc7f72"
+  "0.92.40":
+    hash: "f2a6c6e2871eece57f59ffb1ce7475515fa0c498"
