--- a/conandata.yml
+++ b/conandata.yml
@@ -334,3 +334,5 @@ commit_hash:
     hash: "677e89ae09cdf8e4d755754ba81e14470f626578"
   "0.92.42":
     hash: "87df21dc15dd8a9d80f81749149b8e7b29b93c4d"
+  "0.92.43":
+    hash: "d398e2864c8ca457a503ae1efbf87ff8be514cb7"
