Pull request #158: Introduce a configuration tool
Merge in ADGUARD-CORE-LIBS/vpn-libs from feature/AG-22595 to master

Squashed commit of the following:

commit 7318eea3bc181ee5601292090bdbc28b4d1dc87b
Author: Sergei Gunchenko <s.gunchenko@adguard.com>
Date:   Tue Jun 27 14:21:45 2023 +0300

    wizard: introduce non-interactive mode

commit 53fb012194d21e30dc415f11d0bcd110c85068c7
Author: Sergei Gunchenko <s.gunchenko@adguard.com>
Date:   Mon Jun 26 15:14:22 2023 +0300

    :security:

commit 040c3e7ea8ce3569a8ff595adc9c92a9ab8d5f91
Author: Sergei Gunchenko <s.gunchenko@adguard.com>
Date:   Thu Jun 22 14:09:37 2023 +0300

    use selector menus where applicable

commit f5e351296ea89abe87f449691aac7d3b7028bd13
Author: Sergei Gunchenko <s.gunchenko@adguard.com>
Date:   Wed Jun 21 19:03:24 2023 +0300

    print non-selected listener table as commented

commit f301ab755158287d81b0167046d1368486d0ed2c
Author: Sergei Gunchenko <s.gunchenko@adguard.com>
Date:   Wed Jun 21 18:40:59 2023 +0300

    make wizard less picky

commit f686f00aa02cc561efc0bdea24b1ef166bc8e8d5
Author: Sergei Gunchenko <s.gunchenko@adguard.com>
Date:   Wed Jun 21 17:27:39 2023 +0300

    print descriptions into generated toml config

commit cfc315491f5ea672803515b475d66a7574eb0d18
Merge: e88aef8 51be818
Author: Sergei Gunchenko <s.gunchenko@adguard.com>
Date:   Tue Jun 20 13:53:05 2023 +0300

    Merge remote-tracking branch 'origin/master' into feature/AG-22595

    # Conflicts:
    #	core/test/standalone_client/standalone_client.toml

commit e88aef8ddaa43eb456625ab7b61842fccd72f2ed
Author: Sergei Gunchenko <s.gunchenko@adguard.com>
Date:   Tue Jun 20 13:17:06 2023 +0300

    propose to modify an existing settings file if one found

commit 8ca67a149bb1a1fbc93f68fcc6d42ee899ba51a7
Author: Sergei Gunchenko <s.gunchenko@adguard.com>
Date:   Tue Jun 20 09:54:54 2023 +0300

    minor

commit b9a82d3e36940a4a6d0dc2b191d6a598e578dca6
Author: Sergei Gunchenko <s.gunchenko@adguard.com>
Date:   Fri Jun 9 18:

--- a/core/test/standalone_client/CMakeLists.txt
+++ b/core/test/standalone_client/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.1)
 project(core C CXX)
 
+include(ExternalProject)
+
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 20)
 
@@ -35,7 +37,35 @@ target_link_libraries(standalone_client CONAN_PKG::magic_enum)
 target_link_libraries(standalone_client CONAN_PKG::native_libs_common)
 target_link_libraries(standalone_client CONAN_PKG::tomlplusplus)
 
-configure_file(standalone_client.toml ${CMAKE_CURRENT_BINARY_DIR}/standalone_client.toml COPYONLY)
+if (WIN32)
+    set(WIZARD_EXE_NAME setup_wizard.exe)
+else (WIN32)
+    set(WIZARD_EXE_NAME setup_wizard)
+endif (WIN32)
+
+ExternalProject_Add(setup_wizard
+        SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/setup_wizard
+        BUILD_IN_SOURCE TRUE
+        BUILD_ALWAYS TRUE
+        UPDATE_COMMAND ""
+        PATCH_COMMAND ""
+        CONFIGURE_COMMAND ""
+        BUILD_COMMAND ${CMAKE_COMMAND} -E env cargo build --bin setup_wizard
+        TEST_COMMAND ""
+        INSTALL_COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/setup_wizard/target/debug/${WIZARD_EXE_NAME} ${CMAKE_CURRENT_BINARY_DIR}
+        )
+
+add_custom_target(run_setup_wizard)
+add_custom_command(
+        TARGET run_setup_wizard
+        COMMAND ${CMAKE_CURRENT_BINARY_DIR}/${WIZARD_EXE_NAME}
+        USES_TERMINAL TRUE
+        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+)
+add_dependencies(run_setup_wizard setup_wizard)
 
 enable_testing()
-add_dependencies(tests standalone_client)
+add_dependencies(tests
+        standalone_client
+        setup_wizard
+        )
