Pull request #165: Improve READMEs
Merge in ADGUARD-CORE-LIBS/vpn-libs from feature/readme to master

Squashed commit of the following:

commit 5e66162ab02f8c08c6bd8a90cb0e1a3718e44749
Author: Sergei Gunchenko <s.gunchenko@adguard.com>
Date:   Tue Jul 4 17:04:51 2023 +0300

    review

commit 24f29cd425874a8b3b6b3e3b93008056e5a87d8a
Author: Sergei Gunchenko <s.gunchenko@adguard.com>
Date:   Mon Jul 3 19:31:59 2023 +0300

    minor

commit 0e285fc8ec234191b28a484dcf4817126f691d0a
Author: Sergei Gunchenko <s.gunchenko@adguard.com>
Date:   Mon Jul 3 19:30:14 2023 +0300

    add a note about the endpoint certificate

commit a840b659d4ade512333e3cc5e878527e3350def7
Author: Sergei Gunchenko <s.gunchenko@adguard.com>
Date:   Mon Jul 3 19:16:27 2023 +0300

    add makefile to ease the building process

commit 9b41ab0f8bbdcd92aba987b86618984b8dca3103
Author: Sergei Gunchenko <s.gunchenko@adguard.com>
Date:   Mon Jul 3 17:56:25 2023 +0300

    remove target arch on windows

commit d90cc196f63bd9d2896f7b111875f34bcd936c17
Author: Sergei Gunchenko <s.gunchenko@adguard.com>
Date:   Mon Jul 3 17:54:05 2023 +0300

    review

commit 6868ecf38b576f2933cc71ec233da67f5eea2d38
Author: Sergei Gunchenko <s.gunchenko@adguard.com>
Date:   Wed Jun 28 18:13:51 2023 +0300

    skipci: review

commit 8a984a9dd75d76f4871d140760014e326d9f5a38
Author: Sergei Gunchenko <s.gunchenko@adguard.com>
Date:   Wed Jun 28 17:41:48 2023 +0300

    review

commit df954c284c0fe3133f86d2d6feaf36b5a4ee76a2
Author: Sergei Gunchenko <s.gunchenko@adguard.com>
Date:   Wed Jun 28 17:41:40 2023 +0300

    wizard: allow specifying certificate through command-line args

commit e3aa830377a4aa366ce977c57740f96199d5ba41
Author: Sergei Gunchenko <s.gunchenko@adguard.com>
Date:   Wed Jun 28 16:25:01 2023 +0300

    Improve READMEs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,5 +32,6 @@ add_subdirectory(common)
 add_subdirectory(net)
 add_subdirectory(tcpip)
 add_subdirectory(core)
+add_subdirectory(standalone_client)
 
 enable_testing()
