Pull request #174: Add timeout to gzip in integration tests and delete unzip logs
Merge in ADGUARD-CORE-LIBS/vpn-libs from fix/clean_unzip_logs to master

Squashed commit of the following:

commit d690f88b8afadda2034d0e4ebbf3ae7bec7f1be3
Author: Max Grupper <m.grupper@adguard.com>
Date:   Fri Jul 14 18:54:48 2023 +0300

    add timeout to gzip and delete unzip logs

--- a/bamboo-specs/run-integration-test.yaml
+++ b/bamboo-specs/run-integration-test.yaml
@@ -60,13 +60,27 @@ Run integration test:
             set -x -e
 
             pushd logs
-            gzip -f vpn_tun_http2.log || true
-            gzip -f vpn_tun_http3.log || true
-            gzip -f vpn_socks_http2.log || true
-            gzip -f vpn_socks_http3.log || true
+            timeout 10s gzip -f vpn_tun_http2.log || true
+            timeout 10s gzip -f vpn_tun_http3.log || true
+            timeout 10s gzip -f vpn_socks_http2.log || true
+            timeout 10s gzip -f vpn_socks_http3.log || true
             popd
 
             ./integration_test.sh clean
+        description: Gzip logs
+        working-dir: test
+    - script:
+        interpreter: SHELL
+        scripts:
+          - |-
+            #!/bin/bash
+
+            pushd logs
+            rm -f vpn_tun_http2.log
+            rm -f vpn_tun_http3.log
+            rm -f vpn_socks_http2.log
+            rm -f vpn_socks_http3.log
+            popd
         description: Cleanup
         working-dir: test
   requirements:
