skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -372,3 +372,5 @@ commit_hash:
     hash: "b8fdec703330eb3ff4713e2252b87433fdc96194"
   "0.92.61":
     hash: "4b01b82109a8d79b7a9a4d30a83cf32629dcbb17"
+  "0.92.62":
+    hash: "b4167b234b049ade78b636c08cd19a610d4439ab"
