skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -361,3 +361,5 @@ commit_hash:
     hash: "b4167b234b049ade78b636c08cd19a610d4439ab"
   "0.92.63":
     hash: "07d30e58080fedf55e57a5cc3e100e400dfd7ebb"
+  "0.92.64":
+    hash: "0e6a261498c8fc1779065c61f8bcf96aa8b8095b"
