skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -369,3 +369,5 @@ commit_hash:
     hash: "6f7841d614abc58f30ece1a20e8ad35f8404c9d3"
   "0.92.67":
     hash: "853715553a705815159b95561a2d000d02b27eda"
+  "0.92.68":
+    hash: "b6fdef27b8bc116209390d0c7f7afb666ebe6d42"
