skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -377,3 +377,5 @@ commit_hash:
     hash: "b2ec95febc7dde278c8ff187f35386991d7b3d01"
   "0.92.71":
     hash: "b0af8b4a4e8de4bdec16a325b58467ecb9760198"
+  "0.92.72":
+    hash: "a85e4ebf934ad6d8d21e18413594fbc4d5d26477"
