Pull request #191: Introduce a bunch of tests for udp mux
Merge in ADGUARD-CORE-LIBS/vpn-libs from feature/udp_mux_tests to master

Squashed commit of the following:

commit 7ef1f0c1d1bba018059246d7bc4e2ee1b642c793
Author: Sergei Gunchenko <s.gunchenko@adguard.com>
Date:   Wed Aug 23 18:30:34 2023 +0300

    core: introduce a bunch of tests for udp mux

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -138,6 +138,7 @@ add_unit_test(test_fallbackable_upstream_connector "${TEST_DIR}" "${TEST_EXTRA_I
 add_unit_test(test_vpn_dns_resolver "${TEST_DIR}" "${TEST_EXTRA_INCLUDES}" TRUE TRUE)
 add_unit_test(test_quic_connection_migration "${TEST_DIR}" "${TEST_EXTRA_INCLUDES}" TRUE TRUE)
 add_unit_test(test_connection_statistics "${TEST_DIR}" "${TEST_EXTRA_INCLUDES}" TRUE TRUE)
+add_unit_test(test_http_udp_multiplexer "${TEST_DIR}" "${TEST_EXTRA_INCLUDES}" TRUE TRUE)
 
 if(NOT WIN32)
     add_unit_test(test_vpn_manager_fsm ${TEST_DIR} "${TEST_EXTRA_INCLUDES}" TRUE TRUE)
