Pull request #193: Add option to enable anti-DPI measures
Merge in ADGUARD-CORE-LIBS/vpn-libs from fix/anti_dpi_setting to master

Squashed commit of the following:

commit a95388d5cdb116c6a87cc413d7556def129990b1
Author: Sergey Fionov <sfionov@adguard.com>
Date:   Thu Aug 24 20:12:27 2023 +0300

    Try to fix cargo

commit b65efeebf41a80d93077b930adc6f597c18e5517
Author: Sergey Fionov <sfionov@adguard.com>
Date:   Thu Aug 24 18:48:16 2023 +0300

    Add option to enable anti-DPI measures

--- a/bamboo-specs/run-integration-test.yaml
+++ b/bamboo-specs/run-integration-test.yaml
@@ -147,14 +147,14 @@ Run live test:
 
             ENDPOINT_HOSTNAME="localhost"
 
-            cargo run --release --bin setup_wizard -- --mode non-interactive  \
+            cargo run --config net.git-fetch-with-cli=true --release --bin setup_wizard -- --mode non-interactive  \
               --address "0.0.0.0:4433" \
               --creds premium:premium  \
               --hostname "$ENDPOINT_HOSTNAME"  \
               --lib-settings vpn.toml  \
               --hosts-settings tls_hosts.toml
 
-            cargo build --release --bin vpn_endpoint
+            cargo build --config net.git-fetch-with-cli=true --release --bin vpn_endpoint
         description: Build vpn-libs-endpoint
         working-dir: vpn-libs-endpoint
     - script:
