Pull request 208: Feature/add intrumented test
Merge in ADGUARD-CORE-LIBS/vpn-libs from feature/add-intrumented-test to master

Squashed commit of the following:

commit 4ce07c9147674acd58cccac73f20499cd26b9522
Author: r.aparin <r.aparin@adguard.com>
Date:   Tue Sep 12 06:59:58 2023 -0400

    fix

commit e7e84574dec393f5323645403e5a72860dd007e8
Author: r.aparin <r.aparin@adguard.com>
Date:   Mon Sep 11 22:11:23 2023 -0400

    add clean for test

commit b003b1cfc72d474b9ea95e4d99c70f1d44180dc1
Author: r.aparin <r.aparin@adguard.com>
Date:   Mon Sep 11 21:48:41 2023 -0400

    add new instrumented test

--- a/integration-tests/Dockerfile
+++ b/integration-tests/Dockerfile
@@ -2,7 +2,7 @@
 FROM adguard/core-libs:1.16
 
 # Install the required utilities
-RUN apt update && \
+RUN apt update --allow-releaseinfo-change && \
     apt install -y build-essential cmake curl git gnupg lsb-release iperf3 iproute2 \
     net-tools software-properties-common wget nano iputils-ping iptables tcpdump
 
