--- a/conandata.yml
+++ b/conandata.yml
@@ -433,3 +433,5 @@ commit_hash:
     hash: "48d879de8ff6488764d591b0293354295e114c3b"
   "0.92.99":
     hash: "663b4c102dac5567fe87d84dc33cfa1864a39bf9"
+  "0.92.100":
+    hash: "902f94c464c82ff8a961e12a0bfaaeed601d7354"
