skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -439,3 +439,5 @@ commit_hash:
     hash: "7c259f0774e5bcfe8b36ebfdcded9c8834d41ed8"
   "0.92.102":
     hash: "291a1de0e089ffb2b5fdff3ffa6b35e230a51550"
+  "0.92.103":
+    hash: "7517d7d29f16a7dc4070c05ec5d17b09df6a301f"
