skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -451,3 +451,5 @@ commit_hash:
     hash: "06aaffef6d8d237739dc6d936763e0670acbe2c7"
   "0.92.108":
     hash: "a8dd4f9f1a2e632ce9e24bf1a53ca58f620756e9"
+  "0.92.109":
+    hash: "13e432741c112bf1f3bb869124ddce9226be1dc4"
