skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -461,3 +461,5 @@ commit_hash:
     hash: "eb719d1ebf582ec482c0908c46fed57ad65d0b78"
   "0.92.113":
     hash: "f64e94bda3af760be2898671d0fd502dc7b6e506"
+  "0.92.114":
+    hash: "307ab7e489fee946d5b716a58d41c94d856d08ba"
