skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -493,3 +493,5 @@ commit_hash:
     hash: "6f5ba884cda66a053b86e777e91c44d378c127ce"
   "0.92.129":
     hash: "df51ea39c90dccdb2f4355e15821eaa6f954be48"
+  "0.92.130":
+    hash: "6adb8fa147fdffffc20447428b033056d6226f0a"
