--- a/conandata.yml
+++ b/conandata.yml
@@ -495,3 +495,5 @@ commit_hash:
     hash: "df51ea39c90dccdb2f4355e15821eaa6f954be48"
   "0.92.130":
     hash: "6adb8fa147fdffffc20447428b033056d6226f0a"
+  "0.92.131":
+    hash: "d77ee825e5337b9125e70e20a5a2110a31f4391f"
