skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -499,3 +499,5 @@ commit_hash:
     hash: "d77ee825e5337b9125e70e20a5a2110a31f4391f"
   "0.92.132":
     hash: "2f6cf28e9cfa4f13eb1924016979c6c50ec55937"
+  "0.92.133":
+    hash: "86092475060b0c952be35cf9a268a92cf3ede951"
