skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -507,3 +507,5 @@ commit_hash:
     hash: "127bd98349ae82dc47f75019e1f379254f38a1f4"
   "0.92.136":
     hash: "083ecae07cd77627df09b315e9f062611d4c7eb0"
+  "0.92.137":
+    hash: "7d3049c24fa5f2d8adaeaf05b2ecf209750e254a"
