skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -513,3 +513,5 @@ commit_hash:
     hash: "c30842ca089a9a33db87209717aed5ddd8ddc12a"
   "0.92.139":
     hash: "95a3d35f08d37b456e0129fb97b7fe0ffae5a6a8"
+  "0.92.140":
+    hash: "c8d56926e85c8b195a575e962ea629efaf94feba"
