Pull request 257: Fix build with GCC
Merge in ADGUARD-CORE-LIBS/vpn-libs from fix/gcc to master

Squashed commit of the following:

commit d30fdbbc48d474bdd3e6475b4332cd92427766a8
Author: Sergey Fionov <sfionov@adguard.com>
Date:   Fri Dec 15 17:14:10 2023 +0200

    More fixes

commit a9f8d48cb97aa801781ce2a889abca6e283ee07c
Author: Sergey Fionov <sfionov@adguard.com>
Date:   Fri Dec 15 15:58:32 2023 +0200

    Fix build with GCC

--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -29,10 +29,14 @@ endif()
 add_library(vpnlibs_common STATIC EXCLUDE_FROM_ALL ${SOURCE_FILES})
 set_property(TARGET vpnlibs_common PROPERTY POSITION_INDEPENDENT_CODE ON)
 if (NOT MSVC)
-    target_compile_options(vpnlibs_common PRIVATE -W -Wall -Wextra -Werror)
-    target_compile_options(vpnlibs_common PRIVATE
-            -Wno-unknown-warning-option -Wno-macro-redefined -Wno-unused-parameter
-            -Wno-missing-field-initializers -Wno-c99-designator)
+    target_compile_options(vpnlibs_common PUBLIC -Wall -Wextra -Werror)
+    target_compile_options(vpnlibs_common PUBLIC -Wno-unused-parameter -Wno-missing-field-initializers -Wno-unused-const-variable)
+    if (CMAKE_C_COMPILER_ID MATCHES "(Apple)?Clang")
+        target_compile_options(vpnlibs_common PUBLIC -Wno-unknown-warning-option -Wno-macro-redefined -Wno-c99-designator -Wno-unused-private-field)
+    endif()
+    if (CMAKE_C_COMPILER_ID MATCHES "GNU")
+        target_compile_options(vpnlibs_common PUBLIC -Wno-error=subobject-linkage -Wno-error=return-type -Wno-error=changes-meaning -Wno-error=narrowing)
+    endif()
 endif()
 target_include_directories(vpnlibs_common PUBLIC include)
 target_link_libraries(vpnlibs_common ${CMAKE_THREAD_LIBS_INIT})
