skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -543,3 +543,5 @@ commit_hash:
     hash: "04595bafd431b4d8083ae6d49a9e6337b273b71e"
   "0.92.154":
     hash: "5955a05eb4c5d4e6f8b1ff60e74f179bd062e679"
+  "0.92.155":
+    hash: "39fc666c3b0c2e5599cad175a5ab74d86c5d7d89"
