skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -573,3 +573,5 @@ commit_hash:
     hash: "dbe711ef045a84b24faf008ff8b8609dda2ddad9"
   "0.92.169":
     hash: "4de86076758d1a599f160fb5d60b134387f5b346"
+  "0.92.170":
+    hash: "0e0f93372827951e35c312a8bb25c93a1f2466e0"
