skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -575,3 +575,5 @@ commit_hash:
     hash: "4de86076758d1a599f160fb5d60b134387f5b346"
   "0.92.170":
     hash: "0e0f93372827951e35c312a8bb25c93a1f2466e0"
+  "0.92.171":
+    hash: "704befb2a51c40c5b82b020beaa3a3d5fc354ad7"
