skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -577,3 +577,5 @@ commit_hash:
     hash: "0e0f93372827951e35c312a8bb25c93a1f2466e0"
   "0.92.171":
     hash: "704befb2a51c40c5b82b020beaa3a3d5fc354ad7"
+  "0.92.172":
+    hash: "a731faf758b8c7da6dd8fc1d783935f3a3e4272d"
