Pull request #278: Fix instrumented test
Merge in ADGUARD-CORE-LIBS/vpn-libs from fix/instrumented_test_problems to master

Squashed commit of the following:

commit aaf60952d27d50f1716f0a7583b0f9ac71d92f26
Author: Max Grupper <77971315+grumaxxx@users.noreply.github.com>
Date:   Fri Feb 2 14:49:43 2024 +0200

    skipci: fix comment

commit 6ae84f6b574806f88322691f2b58aae87788ff04
Author: Max Grupper <77971315+grumaxxx@users.noreply.github.com>
Date:   Fri Feb 2 12:56:23 2024 +0200

    skipci: fix

commit 68a76ad0b017797853b261115587297a398add78
Author: Max Grupper <77971315+grumaxxx@users.noreply.github.com>
Date:   Fri Feb 2 12:35:43 2024 +0200

    skipci: fix

commit baef4527534955c8d71126d5a5b7f4691799f76e
Author: Max Grupper <77971315+grumaxxx@users.noreply.github.com>
Date:   Fri Feb 2 12:06:02 2024 +0200

    skipci: try with relay from answer

commit 5bf393c19f905d8b9cb56bffd14c789aed57d9e1
Author: Maxim Grupper <m.grupper@adguard.com>
Date:   Thu Feb 1 20:24:06 2024 +0200

    skipci: wip

commit 64cbc80406c39f856bcdf3d2b647a8321f0dd3e5
Author: Maxim Grupper <m.grupper@adguard.com>
Date:   Thu Feb 1 19:53:33 2024 +0200

    skipci: increase timeout

commit 7a607c76acea698c5f7188e4e4eb2ee054e50475
Author: Maxim Grupper <m.grupper@adguard.com>
Date:   Thu Feb 1 16:40:33 2024 +0200

    skipci: rkn

commit 0d13fa15a56c4fce5d5c09e3e231f36632819380
Author: Maxim Grupper <m.grupper@adguard.com>
Date:   Thu Feb 1 16:19:39 2024 +0200

    skipci: wip

commit de0a10615538002bc7f22a31afd5fea763a3f10e
Author: Maxim Grupper <m.grupper@adguard.com>
Date:   Thu Feb 1 15:41:06 2024 +0200

    skipci: wip

commit 2b54922ecfa21af500da741d36c29505aa118e91
Author: Maxim Grupper <m.grupper@adguard.com>
Date:   Thu Feb 1 15:18:32 2024 +0200

    skipci: wip

commit abf532b614d36cdfb5209cbc778b0d019b3a7de1
Author: Maxim Grupper <m.grupper@adguard.com>
Date:   Thu Feb 1 15:03:34 2024 +0200

    skipci: wip

commit 67e5959e7983eb653372695d675558050b2a59f5
Author: Maxim Grupper <

--- a/bamboo-specs/run-instrumented-test.yaml
+++ b/bamboo-specs/run-instrumented-test.yaml
@@ -66,6 +66,12 @@ Run Instrumented test:
             set -x
 
             pushd logs
+            # Check that file exists and is not empty
+            if [ ! -f vpn_tun_http2.log ]; then
+              echo "vpn_tun_http2.log does not exist"
+              exit 1
+            fi
+            
             timeout 10s gzip -f vpn_tun_http2.log
             if [ $? -eq 124 ]; then
               truncate -s 300M vpn_tun_http2.log
