--- a/conandata.yml
+++ b/conandata.yml
@@ -607,3 +607,5 @@ commit_hash:
     hash: "e93fcb5987203fe8f8aca81370493b321287acc4"
   "0.92.186":
     hash: "34e5c3dd6d1b1d2f4aa8f2c7811abf7a123d1ed9"
+  "0.92.187":
+    hash: "de97e83fa96c44588da691e6d1bf1254c5aec72c"
