--- a/conandata.yml
+++ b/conandata.yml
@@ -615,3 +615,5 @@ commit_hash:
     hash: "e7e64d1c4113682def55d1fe67c1626b56d49f6f"
   "0.92.190":
     hash: "f53531c65e26c3d6720cf17f8475c9fffaefa7ce"
+  "0.92.191":
+    hash: "3c19d85a30a5c97c9ac84ab8d71b72c7c845c1cd"
