--- a/conandata.yml
+++ b/conandata.yml
@@ -617,3 +617,5 @@ commit_hash:
     hash: "f53531c65e26c3d6720cf17f8475c9fffaefa7ce"
   "0.92.191":
     hash: "3c19d85a30a5c97c9ac84ab8d71b72c7c845c1cd"
+  "0.92.192":
+    hash: "a479d56ff30c048ed36a04e09150529b8dc838a0"
