skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -623,3 +623,5 @@ commit_hash:
     hash: "26d5a4895284208201d8be497780043d06463a56"
   "0.92.194":
     hash: "edf3aba562545959c9a4ac90e728654ecf9fea69"
+  "0.92.195":
+    hash: "3922d66c4b3ab93d668efc9629a17b92764b7acf"
