Pull request 299: Fix DnsLibs 2.5 compatibility
Merge in ADGUARD-CORE-LIBS/vpn-libs from fix/dnslibs_2_5_compat to master

Squashed commit of the following:

commit 285fa1f0fdfd00539342f9a2a4f70711f1e520ea
Author: Sergey Fionov <sfionov@adguard.com>
Date:   Wed Mar 20 21:38:51 2024 +0200

    skipci: use 64-bit toolchain for 32-bit build on Windows

commit 3ab9d7d6d3449298923fdfdd0d12d2582941b2c1
Author: Sergey Fionov <sfionov@adguard.com>
Date:   Wed Mar 20 20:47:58 2024 +0200

    Fix DnsLibs 2.5 compatibility

commit e8d009aee83c7f798ad41d56879a707b941f6769
Author: Sergey Fionov <sfionov@adguard.com>
Date:   Wed Mar 20 20:46:24 2024 +0200

    Fix DnsLibs 2.5 compatibility

--- a/bamboo-specs/run-tests.yaml
+++ b/bamboo-specs/run-tests.yaml
@@ -91,7 +91,7 @@ Run tests on Windows:
         interpreter: BINSH_OR_CMDEXE
         scripts:
           - |-
-            call vcvars32
+            call vcvarsall amd64_x86
 
             python -m venv venv --clear
             call .\venv\Scripts\activate
@@ -117,7 +117,7 @@ Run tests on Windows:
         interpreter: BINSH_OR_CMDEXE
         scripts:
           - |-
-            call vcvars32
+            call vcvarsall amd64_x86
             cd build || exit /b 1
             ctest -D ExperimentalTest --no-compress-output || exit /b 1
   final-tasks:
