skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -631,3 +631,5 @@ commit_hash:
     hash: "ce151e784c59c4c69ba41590ddd8da4d5b8227f6"
   "0.92.198":
     hash: "2fa0318307872f8c2f6a8fd2f90b1ed51ac9fa36"
+  "0.92.199":
+    hash: "32b05527f581a6da5078ff8066993e06ebd38535"
