skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -633,3 +633,5 @@ commit_hash:
     hash: "2fa0318307872f8c2f6a8fd2f90b1ed51ac9fa36"
   "0.92.199":
     hash: "32b05527f581a6da5078ff8066993e06ebd38535"
+  "0.92.200":
+    hash: "08b871ddd99099dc0f490d1c8210edd81574fe1c"
