skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -637,3 +637,5 @@ commit_hash:
     hash: "08b871ddd99099dc0f490d1c8210edd81574fe1c"
   "0.92.201":
     hash: "7ce0b8b0ad60b589ea93b66ec694a31e49f2d50b"
+  "0.92.202":
+    hash: "18623cb3aada2b9a7cc1ddc656968b1a2f2666c0"
