skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -647,3 +647,5 @@ commit_hash:
     hash: "8053990dedea8a7e1f546a427749f9395f89f539"
   "0.92.206":
     hash: "65de341a5a59ae3a44e34ee782f42d335b47150b"
+  "0.92.207":
+    hash: "cce73676be930d2e673b0f45a80c1fb35e3a32d4"
