Pull request #310: Make ClientHello look more like Chrome's when using BoringSSL.
Merge in ADGUARD-CORE-LIBS/vpn-libs from feature/AG-32110 to master

Squashed commit of the following:

commit 2d2fdd23360bf354cba6635d59c1a0e02a7372b4
Author: Nikita Gorskikh <n.gorskikh@adguard.com>
Date:   Wed Apr 24 21:32:48 2024 +0300

    Don't enable the Kyber768 key exchange

commit 45537dd35523aa8ae92ca1bb0ba0870d5186587c
Author: Nikita Gorskikh <n.gorskikh@adguard.com>
Date:   Tue Apr 23 18:01:18 2024 +0300

    skipci: add Chrome's version to comment

commit 29c354377e14c7d27bdbf2832549a66dbd063185
Author: Nikita Gorskikh <n.gorskikh@adguard.com>
Date:   Tue Apr 23 17:55:49 2024 +0300

    Arrgh

commit 963ea618dfdbb0e59adef1fc15dd69aebc9f7b02
Author: Nikita Gorskikh <n.gorskikh@adguard.com>
Date:   Tue Apr 23 17:34:55 2024 +0300

    Use fmt

commit 1116e4421df5c295e30615bf485e18809e6ec7b0
Author: Nikita Gorskikh <n.gorskikh@adguard.com>
Date:   Tue Apr 23 16:29:51 2024 +0300

    Fix build errors

commit 84b14f18f5a3a8dcacd31488f5f052cf676363f1
Author: Nikita Gorskikh <n.gorskikh@adguard.com>
Date:   Tue Apr 23 15:53:02 2024 +0300

    Add comments

commit 983034eb30267eb9c05245f3a2290c4a738f7f20
Author: Nikita Gorskikh <n.gorskikh@adguard.com>
Date:   Mon Apr 22 21:01:09 2024 +0300

    Fix build

commit 507189e1ac9eaa786ef0542534538b61eac54816
Author: Nikita Gorskikh <n.gorskikh@adguard.com>
Date:   Sun Apr 21 02:03:41 2024 +0300

    Add a test for ClientHello fingerprint

commit 4db8a446fcabdd9bc2bb624f1fc2f31debbc7ef2
Author: Nikita Gorskikh <n.gorskikh@adguard.com>
Date:   Fri Apr 19 18:01:45 2024 +0300

    Make ClientHello look like Chrome's when using BoringSSL

--- a/net/CMakeLists.txt
+++ b/net/CMakeLists.txt
@@ -103,6 +103,14 @@ link_libraries(vpnlibs_net nlohmann_json::nlohmann_json)
 set(TEST_DIR ${CMAKE_CURRENT_SOURCE_DIR}/test)
 set(TEST_EXTRA_INCLUDES ${NET_SOURCE_DIR})
 
+add_library(ja4 STATIC EXCLUDE_FROM_ALL test/ja4.cpp)
+target_include_directories(ja4 PUBLIC test)
+
+find_package(fmt REQUIRED)
+target_link_libraries(ja4 openssl::openssl fmt::fmt)
+
+link_libraries(ja4)
+
 add_unit_test(test_http_headers "${TEST_DIR}" "" FALSE FALSE)
 add_unit_test(test_tls_parse "${TEST_DIR}" "" FALSE FALSE)
 add_unit_test(test_ping "${TEST_DIR}" "${TEST_EXTRA_INCLUDES}" TRUE TRUE)
