skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -659,3 +659,5 @@ commit_hash:
     hash: "a6ac98ccb48c1fb6b7301e57b83f31537a96e8ec"
   "0.92.212":
     hash: "565dd30be36e41ead695d5c36546bdc5e18fb39d"
+  "0.92.213":
+    hash: "1373c6dd72d5b8f41baf51b94551a17fadfb107c"
