--- a/conandata.yml
+++ b/conandata.yml
@@ -665,3 +665,5 @@ commit_hash:
     hash: "c70ae858bc4784dbf3e6f9848327f82aa98ea586"
   "0.92.215":
     hash: "8c0f836af1bbd118ffd5b4f46bdb3b6c743e0ae8"
+  "0.92.216":
+    hash: "dbfe4db16cf2f37d6de0b0d5dc92721b14cf8692"
