skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -667,3 +667,5 @@ commit_hash:
     hash: "8c0f836af1bbd118ffd5b4f46bdb3b6c743e0ae8"
   "0.92.216":
     hash: "dbfe4db16cf2f37d6de0b0d5dc92721b14cf8692"
+  "0.92.217":
+    hash: "1ed173fd3c1e82146502235d5ba039c0adaf93f9"
