skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -669,3 +669,5 @@ commit_hash:
     hash: "dbfe4db16cf2f37d6de0b0d5dc92721b14cf8692"
   "0.92.217":
     hash: "1ed173fd3c1e82146502235d5ba039c0adaf93f9"
+  "0.92.218":
+    hash: "655a0fb90d9864d1c0ff4566482feda8f23a4acc"
